[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/img/Friend.png" type="Texture" id=1]
[ext_resource path="res://src/entities/Mob.gd" type="Script" id=2]
[ext_resource path="res://assets/img/Flower.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 20.025

[sub_resource type="Animation" id=2]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Death:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Death:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Death:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.21, -0.597076, 0.985806, -0.00999999, -0.706045, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Death:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.41, 0.0738104, 0.975324, -0.14, -0.440269, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.07, 0.05 ), Vector2( 1e-05, 1e-05 ) ]
}

[node name="Mob" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
collision_mask = 2147483653
script = ExtResource( 2 )
max_lives = 4

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.07, 0.05 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

[node name="ShootingTimer" type="Timer" parent="."]

[node name="Death" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 2 )

[node name="CollisionWithSpawnerTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_ShootingTimer_timeout"]
[connection signal="timeout" from="CollisionWithSpawnerTimer" to="." method="_on_CollisionWithSpawnerTimer_timeout"]
